# see-through-cpp

./: .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  convert_diffusers_to_gguf.py  convert_lama_to_gguf.py  gen_reference_ddim.py  gen_reference_lama.py  gen_reference_layerdiff.py  gen_reference_marigold.py  gen_reference_scheduler.py  gen_reference_unet_forward.py  reference_trans_vae.npz  scratch_compare_psd.py  scratch_hf_space_test.py  test_out.psd
.github/workflows/: build.yml
docs/: ggml-upstream-issues.md
docs/decisions/: 0001-port-to-cpp-ggml.md  0002-gguf-weights-self-contained-converter.md  0003-reference-activation-validation.md  0004-remaining-work.md  0005-open-work.md  0005-q4-0-quantization.md  0006-open-work.md  0006-q4-0-quantization.md  0007-1280px-collapse-diagnostics.md  0008-open-work.md  0009-1280px-fix-and-parity-completed.md  0010-speedup-candidates.md  0011-unet-loop-speedups.md
gen_reference/: gen_reference_clip.py  gen_reference_ddim.py  gen_reference_lama.py  gen_reference_layerdiff.py  gen_reference_layerdiff_160.py  gen_reference_marigold.py  gen_reference_scheduler.py  gen_reference_scheduler_2step.py  gen_reference_sd_vae.py  gen_reference_trans_vae.py  gen_reference_trans_vae_full.py  gen_reference_unet_blocks.py  gen_reference_unet_forward.py  gen_reference_unet_forward_160.py  gen_reference_vae_decode_160_tiled.py  gen_reference_vae_encode.py  gen_reference_vae_encode_160_taps.py  gen_reference_vae_encode_160_tiled.py
ggml/: requirements.txt
ggml/examples/: common-ggml.cpp
ggml/scripts/: release.sh  sync-llama.last  sync-whisper.last
ggml/tests/: test-backend-ops.cpp
include/rapidcheck/: Maybe.hpp
include/rapidcheck/detail/: Traits.h
scripts/: check_psd.py  collate_layers.py  convert_diffusers_to_gguf.py  package_release.sh
scripts/git-hooks/: pre-commit
src/: clip.cpp  clip.h  graph_mem.cpp  image_utils.cpp  image_utils.h  lama.cpp  lama.h  ops.cpp  ops.h  otel_jsonl.h  pipeline.cpp  pipeline.h  postproc.cpp  postproc.h  psd_write.cpp  psd_write.h  psd_writer.cpp  psd_writer.h  scheduler.cpp  scheduler.h  see_through.cpp  see_through_capi.cpp  see_through_capi.h  seethrough_capi.cpp  seethrough_capi.h  server.cpp  server_h3.cpp  test_clip.cpp  test_common.h  test_ddim.cpp  test_layerdiff_e2e.cpp  test_marigold_e2e.cpp  test_properties.cpp  test_scheduler.cpp  test_sd_vae.cpp  test_trans_vae.cpp  test_trans_vae_full.cpp  test_unet_blocks.cpp  test_unet_forward.cpp  test_vae_encode.cpp  (+6 more)
test/detail/: MulticastTestListenerTests.cpp
tests/: graph_mem.cpp  probe_attn_block_tiled.cpp  probe_flash_bigT.cpp  probe_mul_mat_kahan.cpp  probe_weight_stats.cpp  psd_layers.cpp  test_attn_precision.cpp  test_common.h  test_graph_properties.cpp  test_lama.cpp  test_layerdiff_e2e_160.cpp  test_linear_precision.cpp  test_marigold_e2e.cpp  test_properties.cpp  test_psd.cpp  test_sd_vae.cpp  test_unet_blocks.cpp  test_unet_forward_160.cpp  test_unet_forward_head_real.cpp  test_vae_decode_tiled.cpp  test_vae_encode_160.cpp  test_vae_encode_tiled.cpp  test_winograd_conv.cpp
tools/: hf_space_infer.py  psd_iou.py  psd_layer_order_qa.py
verify/: Case.lean  KernelGate.lean  QuantDesign.lean  Verify.lean  lake-manifest.json  lakefile.lean
